src/objects/Object_Status__c.object
<CustomObject>
    <fields>
        <fullName>ChangedBy__c</fullName>
        <label>ChangedBy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangedDate__c</fullName>
        <label>Date Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChangedTime__c</fullName>
        <label>Time Changed</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InAct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobOwner__c</fullName>
        <description>JobOwner</description>
        <label>JobOwner</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjNumber__c</fullName>
        <label>Object Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>Object Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_NotifNumber__c</fullName>
        <description>Root_NotifNumber</description>
        <label>Root_NotifNumber</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_ObjNumber__c</fullName>
        <description>Root_ObjNumber</description>
        <label>Root_ObjNumber</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>Status Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Object Status</label>
    <nameField>
        <label>Object Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>